<resources>
    <string name="app_name">SoulissApp</string>
    <string name="app_opt">SoulissApp - Options</string>
    <string name="app_addprog">Add Program</string>
    <string name="opt_network">Network Options</string>
    <string name="bridge_IP"> IP Address assigned at runtime for Souliss node</string>
    <string name="bridge_subnet">IP Subnetmaskassigned at runtime for Souliss node</string>
    <string name="bridge_gateway">IP Gateway assigned at runtime for Souliss node, most likely your router\'s address</string>
    <string name="bridge_ssid">Name of your wireless network your Souliss node will connect to</string>
    <string name="bridge_wifipass">Password of wireless network indicated above</string>
    <string name="last_update">Last update at:</string>
    <string name="last_exec">Last exec at:</string>
    <string name="db_size">DB size</string>
    <string name="waiting">Waiting for updates&#8230;</string>
    <string name="historyof">History of</string>
    <string name="daily">Daily average</string>
    <string name="monthly">Monthly average</string>
    <string name="dialog_notinited_ip">Souliss doesn\'t seem configured. Please configure Souliss Local IP Address on preferences screen</string>
    <string name="dialog_disabled_db">Souliss DB is Empty</string>
    <string name="dialog_notinited_db">Souliss DB is empty. Please create nodes configuration on preferences screen</string>
    <string name="dialog_disabled_service">Souliss Data Service Disabled</string>
    <string name="dialog_notinited_service">Scheduled programs will not be executed!\nActivate DataService on preference screen</string>
    <string name="dialog_dontshowagain">Don\'t show again</string>
    <string name="dialog_warn_db">Warning!</string>
    <string name="dialog_drop_db">You are removing all Souliss nodes and typicals with their history.\nDrop the entire DB?</string>
    <string name="dialog_create_db">All Souliss nodes will be deleted and created again from Gateway </string>
    <string name="dialog_create_db2">. You\'ll lose any previous configuration and history. Proceed?</string>
    <string name="dialog_title_edittext_IP_pubb">Public IP Address</string>
    <string name="dialog_remove_title">Delete Program</string>
    <string name="dialog_remove_cmd">Are you sure you want to delete this command ?</string>
    <string name="dialog_choose_icon">Select icon for </string>
    <string name="dialog_choose_html">Choose a .html file inside /sdcard/Souliss folder</string>
    <string name="allnodes">All Nodes</string>
    <string name="programs_title">Programs</string>
    <string name="programs_no">No Active program</string>
    <string name="programs_add">Add Program</string>
    <string name="execute">Execute</string>
    <string name="programs_trigger_executed">Souliss Trigger executed</string>
    <string name="programs_unexecuted">Active Programs</string>
    <string name="programs_desc">SoulissApp supports Timed Programs (purple), Geo Programs (blue) and Sensor Based commands (red) </string>
    <string name="programs_target">Choose Program\'s Target</string>
    <string name="programs_recursive">The command will not be repeated. It will be executed once only</string>
    <string name="programs_leave">The command will be repeated every time that user leaves home</string>
    <string name="programs_come">The command will be repeated every time that user comes back home</string>
    <string name="programs_when">The command will be executed when slot</string>
    <string name="programs_every">The command will be repeated every %1$d seconds</string>
    <string name="export_ok">Exported successfully %1$d nodes</string>
    <string name="programs_notyet">The command hasn\'t been executed yet</string>
    <string name="command_sent">command Sent</string>
    <string name="command_send">Send command</string>
    <string name="command_inserted">New Program has been saved</string>
    <string name="command_inserted_fail">Error saving new Program </string>
    <string name="compatible">compatible typicals</string>
    <string name="to_all">to all</string>
    <string name="to">to</string>
    <string name="on_node">on node</string>
    <string name="scenes_title">Scenes</string>
    <string name="scenes_delete">Delete Scene</string>
    <string name="scenes_rename">Rename Scene</string>
    <string name="scenes_changeicon">Change Scene Icon</string>
    <string name="scenes_add">Add Scene</string>
    <string name="scenes_empty">Scene is Empty!</string>
    <string name="scenes_empty_desc">Use button below to add a command to this scene</string>
    <string name="scenes_desc">Scenes are made of several Souliss Commands. Long-press a Scene to edit or execute it, tap it to open details. Use button to create a new empty Scene</string>
    <string name="scene_turnoff_lights">Turn Off lights</string>
    <string name="scene_turnon_lights">Turn On lights</string>
    <string name="scene_commands">Scene Commands</string>
    <string name="scene_add_command">Add Command</string>
    <string name="scene_add_command_to">Add Command to</string>
    <string name="scene_del_command">Delete Command</string>
    <string name="scene_send_command">Send Command</string>
    <string name="scene_cmd_order">Execution delay: </string>
    <string name="scene_cmd_massive">Global command</string>
    <string name="scene_subtitle">Scene based on %1$d commands</string>
    <string name="addprogram_choosecommand">Choose Program\'s Command</string>
    <string name="addprogram_timed">Timed Activation</string>
    <string name="addprogram_scheduleevery">Repeat Every:</string>
    <string name="addprogram_timed_desc">The command below will be activated at chosen time of day. If recursive, the program will be repeated at specified intervals</string>
    <string name="addprogram_positional">Position Based Activation</string>
    <string name="addprogram_positional_goout">Activate when I leave</string>
    <string name="addprogram_positional_comeback">Activate when I come back</string>
    <string name="addprogram_positional_desc">The command below will be activated upon user\'s position changes</string>
    <string name="addprogram_sensorial">Sensor Based Activation</string>
    <string name="addprogram_sensorial_desc">The command below will be activated upon specified slot\'s value. Choose operator and Threshold value</string>
    <string name="addprogram_threshold">Threshold value</string>
    <string name="menu_exit">Exit</string>
    <string name="menu_options">Options</string>
    <string name="menu_test">Test Low-level UDP Connectivity</string>
    <string name="menu_test_udp">Test UDP</string>
    <string name="menu_addFav">Add to Favourites</string>
    <string name="menu_rename">Rename Node</string>
    <string name="menu_changenodeicon">Change Node Icon</string>
    <string name="menu_changetypicon">Change typical Icon</string>
    <string name="rename_typical">Rename typical</string>
    <string name="test_health">Health request is used to required node communications\' health</string>
    <string name="test_typ_title">TYPREQ</string>
    <string name="test_typ">Request typicals once, no subscription</string>
    <string name="test_poll">Require all souliss network data once, no subscription</string>
    <string name="test_ping">Ping command to check Souliss connectivity</string>
    <string name="opt_credits">Credits</string>
    <string name="opt_credits_desc">Souliss is an open-source project with many contributors. Tap too see the list</string>
    <string name="opt_userindex">User Index</string>
    <string name="opt_nodeindex">Node Index</string>
    <string name="opt_title_broadcast">Broadcast Discovery</string>
    <string name="opt_summary_broadcast">On local LANs Souliss can discover Gateway node automatically</string>
    <string name="opt_networkdesc">Home and remote network settings</string>
    <string name="opt_dbexp">Export DB</string>
    <string name="opt_dbexp_desc">Write a .csv file on sdcard containing current db</string>
    <string name="opt_dbimp">Import DB</string>
    <string name="opt_dbimp_desc">Import a .csv file. Warning! Souliss Data will be ovewritten!</string>
    <string name="opt_dbopt_desc">Vacuum DB and remove logs older than a year</string>
    <string name="opt_dbopt">Optimize DB</string>
    <string name="opt_db">Souliss DB</string>
    <string name="opt_db_desc">(Re)create database, import and export</string>
    <string name="opt_dbdrop">Drop DB</string>
    <string name="opt_dbdrop_desc">Delete ALL nodes and Logs</string>
    <string name="opt_loghist_desc">Save every Devices\' status change</string>
    <string name="opt_loghist">History enabled</string>
    <string name="opt_dbinfo">DB Status</string>
    <string name="opt_dbinfo_desc">%1$d Souliss nodes are stored in DB, totally %2$d typicals are present.</string>
    <string name="title_edittext_IP">Souliss Local Address (mandatory)</string>
    <string name="summary_edittext_IP">Insert Souliss Gateway Node\'s IP Address when using home network</string>
    <string name="dialog_title_edittext_IP">IP Address</string>
    <string name="summary_edittext_IP_pubb">Insert Souliss public address, to use when away from home. You could use dynamic DNS and port-forwarding to reach your home easily</string>
    <string name="title_edittext_IP_pubb">Souliss public Address</string>
    <string name="opt_tetxfx">Text Effects</string>
    <string name="opt_tetxfx_desc">Animate icons and text</string>
    <string name="opt_animfx">Animations</string>
    <string name="opt_animfx_desc">Enable screen sliding and fades</string>
    <string name="opt_lighttheme">Light color Theme</string>
    <string name="opt_lighttheme_desc">Use light colors (need app restart)</string>
    <string name="opt_restore">Restore Warnings</string>
    <string name="opt_restore_desc">Show suppressed warning dialogs again</string>
    <string name="opt_visual">Visual Options</string>
    <string name="opt_visualdesc">Text size and effects</string>
    <string name="opt_servicedesc">Configure Souliss background services and home position</string>
    <string name="opt_serviceEnable">Data Service Enabled</string>
    <string name="opt_serviceEnable_desc">Background service keeps Souliss synchronized</string>
    <string name="opt_serviceinterval">Service Interval</string>
    <string name="opt_serviceinterval_desc">Higher speeds require more battery and resources</string>
    <string name="opt_servicehomepos">Set Home Location</string>
    <string name="opt_servicehomepos_desc">set current position as reference for positional Programs</string>
    <string name="opt_Thold_desc">Range at which you\'ll be considered out of home when you leave</string>
    <string name="opt_Thold">Distance Threshold</string>
    <string name="opt_service">Background Services</string>
    <string name="opt_timeout_pubb">Connection Timeout</string>
    <string name="opt_timeout_pubb_desc">Choose Connection timeout when using Internet</string>
    <string name="opt_net_home">Network</string>
    <string name="existing_tag" >Existing Tag</string>
    <string name="new_tag">New Tag</string>
    <string name="input_tag_name">Input new Tag\'s name</string>
    <string name="opt_udpport" >UDP Port</string>
    <string name="bridge_isgateway" >Configure remote node as Gateway/Peer for the Souliss network</string>
    <string name="bridge_useDhcp" >Use DHCP for remote board IP address assignment</string>
    <string name="udpport_summary">Choose outgoing datagrams\'port</string>
    <string name="advbroadcast_summary">Remotely configure Souliss Node</string>
    <string name="opt_fahrenheit" >Use Fahrenheit</string>
    <string name="opt_voice_command">Voice Command</string>
    <string name="opt_voice_command_desc">Execute scenes and send commands with your voice. Tap for details</string>
    <string name="opt_get_nodes">Get Souliss Nodes</string>
</resources>