<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:icon="@android:drawable/ic_menu_mylocation"
    android:key="network_setup"
    android:summary="@string/opt_networkdesc"
    android:title="@string/opt_network">

    <PreferenceCategory android:title="@string/opt_net_home" >
        <EditTextPreference
            android:dialogTitle="@string/dialog_title_edittext_IP"
            android:key="edittext_IP"
            android:summary="@string/summary_edittext_IP"
            android:title="@string/title_edittext_IP" />

        <ListPreference
            android:defaultValue="3000"
            android:entries="@array/updateInterval"
            android:entryValues="@array/updateIntervalValues"
            android:key="remoteTimeout"
            android:summary="@string/opt_timeout_pubb_desc"
            android:title="@string/opt_timeout_pubb" />

        <EditTextPreference
            android:dialogTitle="@string/dialog_title_edittext_IP_pubb"
            android:key="edittext_IP_pubb"

            android:summary="@string/summary_edittext_IP_pubb"
            android:title="@string/title_edittext_IP_pubb" />
    </PreferenceCategory>
    <PreferenceCategory android:title="Advanced" >
        <SwitchPreference
            android:defaultValue="true"
            android:key="checkboxBroadcast"
            android:summary="@string/opt_summary_broadcast"
            android:title="@string/opt_title_broadcast" />

        <Preference
            app:fragment="it.angelic.soulissclient.preferences.BroadcastSettingsFragment"
            app:icon="@android:drawable/ic_menu_share"
            android:summary="@string/advbroadcast_summary"
            android:title="Broadcast Setting to nodes" />

        <EditTextPreference
            android:name="udpport"
            android:dialogTitle="@string/opt_udpport"
            android:inputType="number"
            android:summary="@string/udpport_summary"
            android:key="udpportIC"
            android:title="@string/opt_udpport" />

        <EditTextPreference
            android:name="userindex"
            android:dialogTitle="@string/opt_userindex"
            android:inputType="number"
            android:key="userindexIC"
            android:title="@string/opt_userindex" />
        <EditTextPreference
            android:name="nodeindex"
            android:dialogTitle="@string/opt_nodeindex"
            android:inputType="number"
            android:key="nodeindexIC"
            android:title="@string/opt_nodeindex" />
    </PreferenceCategory>

</PreferenceScreen>