<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:icon="@android:drawable/ic_menu_rotate"
    android:key="service_setup"
    android:summary="@string/opt_servicedesc"
    android:title="@string/opt_service" >

    <PreferenceCategory android:title="@string/service" >
        <SwitchPreference
            android:defaultValue="false"
            android:key="checkboxService"
            android:summary="@string/opt_serviceEnable_desc"
            android:title="@string/opt_serviceEnable" />

        <SeekBarPreference
            android:defaultValue="15"
            android:key="updateRate"
            android:max="200"
            android:summary="@string/opt_serviceinterval_desc"
            android:title="@string/opt_serviceinterval"
            android:min="1" />
        <SwitchPreference
            android:defaultValue="false"
            android:key="checkboxVoiceCommand"
            android:summary="@string/opt_voice_command_desc"
            android:title="@string/opt_voice_command" />
    </PreferenceCategory>
     <PreferenceCategory android:title="@string/position" >
        <Preference
            android:name="setHomeLocation"
            android:key="setHomeLocation"
            android:summary="@string/opt_servicehomepos_desc"
            android:title="@string/opt_servicehomepos" />
         <SeekBarPreference
            android:defaultValue="150"
            android:key="distanceThold"
            android:max="1200"
            android:summary="@string/opt_Thold_desc"
            android:title="@string/opt_Thold"
             android:min="30" />
    </PreferenceCategory>


</PreferenceScreen>