<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:icon="@android:drawable/ic_menu_gallery"
    android:key="visual_PrefScreen"
    android:summary="@string/opt_visualdesc"
    android:title="@string/opt_visual">

        <CheckBoxPreference
            android:defaultValue="false"
            android:key="checkboxFahrenheit"
            android:title="@string/opt_fahrenheit" />
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="checkboxTestoEffetti"
            android:summary="@string/opt_tetxfx_desc"
            android:title="@string/opt_tetxfx" />
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="checkboxAnimazione"
            android:summary="@string/opt_animfx_desc"
            android:title="@string/opt_animfx" />
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="checkboxHoloLight"
            android:summary="@string/opt_lighttheme_desc"
            android:title="@string/opt_lighttheme" />

        <Preference
            android:name="restoredialogs"
            android:key="restoredialogs"
            android:summary="@string/opt_restore_desc"
            android:title="@string/opt_restore" />

        <Preference
            android:name="restorewelcome"
            android:key="restorewelcome"
            android:summary="@string/opt_restore_welcome_desc"
            android:title="@string/opt_restore_welcome"/>

</PreferenceScreen>