<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:robobunny="http://robobunny.com" >

    <PreferenceCategory
        android:icon="@android:drawable/ic_menu_mylocation"
        android:title="Souliss Configuration" >
        <Preference
            android:icon="@android:drawable/ic_menu_mylocation"
            android:summary="@string/opt_networkdesc"
            android:title="@string/opt_network" >
            <intent
                android:action="network_setup"
                android:targetClass="it.angelic.soulissclient.PreferencesActivity"
                android:targetPackage="it.angelic.soulissclient" />
        </Preference>
        <Preference
            android:icon="@android:drawable/ic_menu_save"
            android:summary="@string/opt_db_desc"
            android:title="@string/opt_db" >
            <intent
                android:action="db_setup"
                android:targetClass="it.angelic.soulissclient.PreferencesActivity"
                android:targetPackage="it.angelic.soulissclient" />
        </Preference>
        <Preference
            android:icon="@android:drawable/ic_menu_rotate"
            android:summary="@string/opt_servicedesc"
            android:title="@string/opt_service" >
            <intent
                android:action="service_setup"
                android:targetClass="it.angelic.soulissclient.PreferencesActivity"
                android:targetPackage="it.angelic.soulissclient" />
        </Preference>
    </PreferenceCategory>
    <PreferenceCategory android:title="Personalize" >
        <Preference
            android:icon="@android:drawable/ic_menu_gallery"
            android:summary="@string/opt_visualdesc"
            android:title="@string/opt_visual" >
            <intent
                android:action="visual_setup"
                android:targetClass="it.angelic.soulissclient.PreferencesActivity"
                android:targetPackage="it.angelic.soulissclient" />
        </Preference>
        
    </PreferenceCategory>
     <PreferenceCategory android:title="Test" >
        <Preference
            android:icon="@android:drawable/ic_menu_agenda"
            android:summary="@string/menu_test"
            android:title="@string/menu_test_udp" >
            <intent
                android:targetClass="it.angelic.soulissclient.ManualUDPTestActivity"
                android:targetPackage="it.angelic.soulissclient" />
        </Preference>
        
    </PreferenceCategory>
    <PreferenceCategory android:title="Credits" >
        <Preference
            android:name="credits"
            android:key="credits"
            android:summary="@string/opt_credits_desc"
            android:title="@string/opt_credits" />
    </PreferenceCategory>

</PreferenceScreen>