<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/Opzioni"
        android:icon="@android:drawable/ic_menu_preferences"
        android:title="@string/menu_options"
        android:orderInCategory="0"/>

    <item
        android:id="@+id/RinominaScena"
        android:icon="@android:drawable/ic_menu_edit"
        android:title="@string/scenes_rename"
        android:orderInCategory="2"/>
    <item
        android:id="@+id/CambiaIconaScena"
        android:icon="@android:drawable/ic_menu_gallery"
        android:title="@string/scenes_changeicon"
        android:orderInCategory="2"/>
    <item
        android:id="@+id/AddScene"
        android:icon="@android:drawable/ic_menu_add"
        android:title="@string/scene_add_command"
        android:orderInCategory="2"/>
    <item
        android:id="@+id/AddSceneToDashboard"
        android:title="@string/menu_addto_dashboard"/>

</menu>