<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/dialog_layout_root"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp"
    style="@android:style/Theme.Dialog">

    <RadioButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:textSize="@dimen/text_size_med"
        android:text="@string/dashboard"
        android:id="@+id/radioButtonDashboardTag"/>

    <RadioButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/existing_tag"
        android:textSize="@dimen/text_size_med"
        android:padding="8dp"
        android:id="@+id/radioButtonTag" />

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/spinnerTags"

        android:layout_gravity="center_horizontal"
        android:paddingLeft="36dp"/>

    <RadioButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_tag"
        android:textSize="@dimen/text_size_med"
        android:padding="8dp"
        android:id="@+id/radioButtonNewTag" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/editTextNewTag"
        android:enabled="false"
        android:paddingLeft="36dp"
        android:hint="@string/input_tag_name"/>

</LinearLayout>